Integrate login page UI

--- a/src/styles/landing-pages.css
+++ b/src/styles/landing-pages.css
@@ -1,8 +1,8 @@
 .nav-bar {
   max-height: 10%;
-  margin-left: 3.5rem;
-  margin-right: 3.5rem;
-  margin-top: 1.5rem;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 1%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -13,6 +13,19 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.forgot-password-link {
+  text-decoration: none;
+  color: blue;
+}
+
+input {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid #1cc29f;
+  width: 100%;
 }
 
 .btn-sign-up {
@@ -29,4 +42,55 @@
   font-weight: 600;
   text-decoration: none;
   color: #1cc29f;
+}
+
+.btn-login-form {
+  margin-top: 1rem;
+  background-color: #1cc29f;
+  cursor: pointer;
+  font-weight: 600;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 15px 17px;
+}
+
+.landing-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: burlywood;
+}
+.login-window {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20vh;
+  padding: 3rem;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+}
+.login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.error-message {
+  color: red;
+  font-size: 1rem;
+  margin: 0px;
+  padding: 0px;
 }
